--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,11 @@
     <artifactId>genetic</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>jama</groupId>
+            <artifactId>jama</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+    </dependencies>
 </project>
